// Copyright (C) 2024 Declan Teevan
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package stocklet.order.v1;

option go_package = "github.com/hexolan/stocklet/internal/pkg/protogen/order/v1;order_v1";

// status will be processing
message OrderCreatedEvent {
  int32 revision = 1;

  string order_id = 2;
  string customer_id = 3;

  map<string, int32> item_quantities = 4;
}

// Order Placed Event
// Initiates the Place Order saga.
//
// order status will be pending
message OrderPlacedEvent {
  int32 revision = 1;

  string order_id = 2;
  string customer_id = 3;

  map<string, int32> item_quantities = 4;
  float total_price = 5;
}

message OrderRejectedEvent {
  int32 revision = 1;

  string order_id = 2;

  optional string transaction_id = 3;
  optional string shipping_id = 4;
}

message OrderApprovedEvent {
  int32 revision = 1;

  string order_id = 2;

  string transaction_id = 3;
  string shipping_id = 4;
}
