syntax = "proto3";

package stocklet.payment.v1;
option go_package = "github.com/hexolan/stocklet/internal/pkg/protogen/payment/v1;payment_v1";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

message GetBalanceRequest {}
message GetBalanceResponse {}

// todo: find proper marking - these are internal methods (not exposed by grpc-gateway)
// also allows the possibility for implementing orchestrators
// simplifies event consumers - just call these internally (similar to grpc-gateway but as a sort of grpc event gateway)
// event recieved -> MakePaymentRequest
// response: paid -> success event
//  success event: contains payment_id
// response: failure -> failure event
message MakePaymentRequest {}
message MakePaymentResponse {}

message ReversePaymentRequest {}
message ReversePaymentResponse {}

service PaymentService {
    rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse) {
        option (google.api.http) = {
            get: "/v1/payment/balance"
        };
    }

    // todo: find correct annotations to mark these are internal
    rpc MakePayment(MakePaymentRequest) returns (MakePaymentResponse) {}
    rpc ReversePayment(ReversePaymentRequest) returns (ReversePaymentResponse) {}
}